Fix logos wrap

--- a/src/app/components/footer/footer.scss
+++ b/src/app/components/footer/footer.scss
@@ -25,6 +25,7 @@ $item-message-text-color: color($grey, 700);
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
   padding: 20px;
   background-color: $brands-logos-background-color;
 }
