--- a/src/app/pages/main/main.scss
+++ b/src/app/pages/main/main.scss
@@ -45,6 +45,11 @@ $stock-image-max-height: 500px;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .logo {
+    margin: 10px;
   }
 }
 
